cmake_minimum_required(VERSION 3.23)
project(GRAPH_INTERNALS CXX)
set(CMAKE_CXX_STANDARD 17)

set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} INTERFACE)

target_link_libraries(
        ${PROJECT_NAME} INTERFACE
        ${IGRAPH_LIBRARIES}
)

target_include_directories(
        ${PROJECT_NAME} PUBLIC INTERFACE
        ${IGRAPH_INCLUDE_DIRS}
)

set(${PROJECT_NAME}_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(${PROJECT_NAME}_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
